# actix-web-sqlx

./: Cargo.toml  Dockerfile  README-IT.md  README.md
src/: handler.rs  main.rs  middlewares.rs  model.rs
src/middlewares/: err_handlers.rs  manager_logger.rs  security_headers.rs
